--- a/app/src/main/res/layout/activity_followup.xml
+++ b/app/src/main/res/layout/activity_followup.xml
@@ -36,7 +36,7 @@
         app:layout_constraintVertical_bias="0.032" />
 
     <Button
-        android:id="@+id/buttonAccept2"
+        android:id="@+id/buttonReject"
         android:layout_width="132dp"
         android:layout_height="64dp"
         android:layout_marginStart="44dp"
@@ -49,5 +49,16 @@
         app:layout_constraintStart_toEndOf="@+id/buttonAccept"
         app:layout_constraintTop_toBottomOf="@+id/feedback"
         app:layout_constraintVertical_bias="0.032" />
+
+    <Button
+        android:id="@+id/backButton"
+        android:layout_width="187dp"
+        android:layout_height="56dp"
+        android:background="#000000"
+        android:text="Back"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
