--- a/app/src/main/res/layout/activity_lost_form.xml
+++ b/app/src/main/res/layout/activity_lost_form.xml
@@ -21,19 +21,32 @@
             tools:layout_editor_absoluteX="1dp"
             tools:layout_editor_absoluteY="-131dp">
 
+            <TextView
+                android:id="@+id/header"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="35dp"
+                android:text="Lost Form"
+                android:textColor="@color/white"
+                android:textSize="35sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/linearLayout"/>
+
             <LinearLayout
                 android:id="@+id/linearLayout"
                 android:layout_width="325dp"
                 android:layout_height="wrap_content"
-                android:layout_marginVertical="50dp"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="25dp"
+                android:layout_marginBottom="50dp"
                 android:background="#383636"
                 android:elevation="4dp"
                 android:orientation="vertical"
                 android:padding="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toBottomOf="@+id/header">
 
                 <EditText
                     android:id="@+id/lostItemName"
@@ -68,14 +81,25 @@
                     android:layout_gravity="center"
                     android:layout_marginTop="35dp"
                     android:background="@drawable/rounded_edittext"
+                    android:clickable="true"
                     android:ems="10"
-                    android:hint="Date"
-                    android:inputType="date"
+                    android:focusable="false"
+                    android:hint="Select Date Lost"
+                    android:inputType="none"
                     android:paddingLeft="7dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.502"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/spinner" />
+
+                <TextView
+                    android:id="@+id/dateError"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:textColor="@android:color/holo_red_dark"
+                    android:textSize="14sp"
+                    android:visibility="gone"/>
 
                 <EditText
                     android:id="@+id/lostItemLocation"
