--- a/app/src/main/res/layout/activity_found_form.xml
+++ b/app/src/main/res/layout/activity_found_form.xml
@@ -36,7 +36,7 @@
 
             <LinearLayout
                 android:id="@+id/linearLayout"
-                android:layout_width="325dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25dp"
                 android:layout_marginBottom="50dp"
