--- a/app/src/main/res/layout/activity_ongoing.xml
+++ b/app/src/main/res/layout/activity_ongoing.xml
@@ -10,7 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="#726B6B"
         android:fillViewport="true"
         tools:context=".OngoingActivity">
 
@@ -18,6 +17,7 @@
             android:id="@+id/main"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@drawable/skybackground"
             tools:layout_editor_absoluteX="1dp"
             tools:layout_editor_absoluteY="-131dp">
 
@@ -103,8 +103,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@color/black"
+            android:backgroundTint="@color/black"
             android:text="Back"
-            android:textColor="@color/white"  />
+            android:textColor="@color/white"/>
     </LinearLayout>
 </LinearLayout>
