--- a/app/src/main/res/layout/activity_matched_item_details.xml
+++ b/app/src/main/res/layout/activity_matched_item_details.xml
@@ -94,6 +94,20 @@
                 app:layout_constraintHorizontal_bias="0.149"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/locationTextView" />
+
+            <Button
+                android:id="@+id/viewSourceButton"
+                android:layout_width="226dp"
+                android:layout_height="44dp"
+                android:background="@drawable/rounded_button"
+                android:text="Chat with User"
+                android:textColor="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.497"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
+                app:layout_constraintVertical_bias="0.188" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
     <LinearLayout
