--- a/app/src/main/res/layout/activity_item_details.xml
+++ b/app/src/main/res/layout/activity_item_details.xml
@@ -174,7 +174,7 @@ android:orientation="vertical">
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@color/black"
+            android:backgroundTint="@color/black"
             android:text="Back"
             android:textColor="@color/white"/>
     </LinearLayout>
