--- a/app/src/main/res/layout/activity_matched_item_details.xml
+++ b/app/src/main/res/layout/activity_matched_item_details.xml
@@ -117,13 +117,13 @@
                 android:layout_width="376dp"
                 android:layout_height="32dp"
                 android:layout_marginLeft="10dp"
-                android:layout_marginBottom="324dp"
+                android:layout_marginBottom="356dp"
                 android:text="Photo:"
                 android:textColor="#FFFFFF"
                 android:textSize="25dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.485"
+                app:layout_constraintHorizontal_bias="0.4"
                 app:layout_constraintStart_toStartOf="parent" />
 
             <FrameLayout
@@ -157,7 +157,7 @@
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.911" />
+                app:layout_constraintVertical_bias="0.868" />
 
             <TextView
                 android:id="@+id/noImageText"
@@ -173,23 +173,24 @@
                 app:layout_constraintHorizontal_bias="0.494"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.702" />
+                app:layout_constraintVertical_bias="0.644" />
+
+            <Button
+                android:id="@+id/button5"
+                android:layout_width="0dp"
+                android:layout_height="51dp"
+                android:backgroundTint="#000000"
+                android:text="Back"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/button3"
+                app:layout_constraintVertical_bias="1.0" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#ffffff"
-        android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/backButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/black"
-            android:text="Back"
-            android:textColor="@color/white" />
-    </LinearLayout>
+
+
 </LinearLayout>
